// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PR Workflow (from: null, to: pull_request) > has the expected logs 1`] = `
[
  "0_placeholder.txt",
  "placeholder/system.txt",
  "placeholder/1_Set up job.txt",
  "placeholder/2_Run actions_checkout@v4.txt",
  "placeholder/3_Run echo Malicious Input.txt",
  "placeholder/4_Run git symbolic-ref --short HEAD.txt",
  "placeholder/5_Run git rev-parse --abbrev-ref HEAD.txt",
  "placeholder/6_Run git branch --show-current.txt",
  "placeholder/7_Run git for-each-ref --points-at HEAD 'refs__'  cut -f2.txt",
  "placeholder/14_Post Run actions_checkout@v4.txt",
  "placeholder/15_Complete job.txt",
]
`;

exports[`PR Workflow (from: null, to: pull_request) > should have the expected branch 1`] = `""`;

exports[`PR Workflow (from: null, to: pull_request) > should have the expected for-each-ref 1`] = `"refs/remotes/pull/1/merge"`;

exports[`PR Workflow (from: null, to: pull_request) > should have the expected ref-parse 1`] = `"HEAD"`;

exports[`PR Workflow (from: null, to: pull_request) > should have the expected symbolic ref 1`] = `
"fatal: ref HEAD is not a symbolic ref
##[error]Process completed with exit code 128."
`;

exports[`PR Workflow (from: null, to: pull_request) > the workflow should run from the expected ref 1`] = `"Malicious Input"`;

exports[`PR Workflow (from: pull_request, to: pull_request) > has the expected logs 1`] = `
[
  "0_placeholder.txt",
  "placeholder/system.txt",
  "placeholder/1_Set up job.txt",
  "placeholder/2_Run actions_checkout@v4.txt",
  "placeholder/3_Run echo Malicious Input.txt",
  "placeholder/4_Run git symbolic-ref --short HEAD.txt",
  "placeholder/5_Run git rev-parse --abbrev-ref HEAD.txt",
  "placeholder/6_Run git branch --show-current.txt",
  "placeholder/7_Run git for-each-ref --points-at HEAD 'refs__'  cut -f2.txt",
  "placeholder/14_Post Run actions_checkout@v4.txt",
  "placeholder/15_Complete job.txt",
]
`;

exports[`PR Workflow (from: pull_request, to: pull_request) > should have the expected branch 1`] = `""`;

exports[`PR Workflow (from: pull_request, to: pull_request) > should have the expected for-each-ref 1`] = `"refs/remotes/pull/1/merge"`;

exports[`PR Workflow (from: pull_request, to: pull_request) > should have the expected ref-parse 1`] = `"HEAD"`;

exports[`PR Workflow (from: pull_request, to: pull_request) > should have the expected symbolic ref 1`] = `
"fatal: ref HEAD is not a symbolic ref
##[error]Process completed with exit code 128."
`;

exports[`PR Workflow (from: pull_request, to: pull_request) > the workflow should run from the expected ref 1`] = `"Malicious Input"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > has the expected logs 1`] = `
[
  "0_placeholder.txt",
  "placeholder/system.txt",
  "placeholder/1_Set up job.txt",
  "placeholder/2_Run actions_checkout@v4.txt",
  "placeholder/3_Run echo Malicious Input.txt",
  "placeholder/4_Run git symbolic-ref --short HEAD.txt",
  "placeholder/5_Run git rev-parse --abbrev-ref HEAD.txt",
  "placeholder/6_Run git branch --show-current.txt",
  "placeholder/7_Run git for-each-ref --points-at HEAD 'refs__'  cut -f2.txt",
  "placeholder/14_Post Run actions_checkout@v4.txt",
  "placeholder/15_Complete job.txt",
]
`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > should have the expected branch 1`] = `""`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > should have the expected for-each-ref 1`] = `"refs/remotes/pull/1/merge"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > should have the expected ref-parse 1`] = `"HEAD"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > should have the expected symbolic ref 1`] = `
"fatal: ref HEAD is not a symbolic ref
##[error]Process completed with exit code 128."
`;

exports[`PR Workflow (from: pull_request_target, to: pull_request) > the workflow should run from the expected ref 1`] = `"Malicious Input"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > has the expected logs 1`] = `
[
  "0_placeholder.txt",
  "placeholder/system.txt",
  "placeholder/1_Set up job.txt",
  "placeholder/2_Run actions_checkout@v4.txt",
  "placeholder/3_Run echo Hello World!.txt",
  "placeholder/4_Run git symbolic-ref --short HEAD.txt",
  "placeholder/5_Run git rev-parse --abbrev-ref HEAD.txt",
  "placeholder/6_Run git branch --show-current.txt",
  "placeholder/7_Run git for-each-ref --points-at HEAD 'refs__'  cut -f2.txt",
  "placeholder/14_Post Run actions_checkout@v4.txt",
  "placeholder/15_Complete job.txt",
]
`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > should have the expected branch 1`] = `"workflows/from@pull_request_target/to@pull_request_target/main"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > should have the expected for-each-ref 1`] = `
"refs/heads/workflows/from@pull_request_target/to@pull_request_target/main
refs/remotes/origin/workflows/from@pull_request_target/to@pull_request_target/main"
`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > should have the expected ref-parse 1`] = `"workflows/from@pull_request_target/to@pull_request_target/main"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > should have the expected symbolic ref 1`] = `"workflows/from@pull_request_target/to@pull_request_target/main"`;

exports[`PR Workflow (from: pull_request_target, to: pull_request_target) > the workflow should run from the expected ref 1`] = `"Hello World!"`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > has the expected logs 1`] = `
[
  "0_placeholder.txt",
  "placeholder/system.txt",
  "placeholder/1_Set up job.txt",
  "placeholder/2_Run actions_checkout@v4.txt",
  "placeholder/3_Run echo Malicious Input.txt",
  "placeholder/4_Run git symbolic-ref --short HEAD.txt",
  "placeholder/5_Run git rev-parse --abbrev-ref HEAD.txt",
  "placeholder/6_Run git branch --show-current.txt",
  "placeholder/7_Run git for-each-ref --points-at HEAD 'refs__'  cut -f2.txt",
  "placeholder/14_Post Run actions_checkout@v4.txt",
  "placeholder/15_Complete job.txt",
]
`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > should have the expected branch 1`] = `""`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > should have the expected for-each-ref 1`] = `"refs/remotes/pull/1/merge"`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > should have the expected ref-parse 1`] = `"HEAD"`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > should have the expected symbolic ref 1`] = `
"fatal: ref HEAD is not a symbolic ref
##[error]Process completed with exit code 128."
`;

exports[`PR Workflow (from: workflow_dispatch, to: pull_request) > the workflow should run from the expected ref 1`] = `"Malicious Input"`;
